src/components/select/select.css
:host {
  --select-color: var(--leu-color-black-100);
  --select-color-disabled: var(--leu-color-black-20);
  --select-color-invalid: var(--leu-color-func-red);
  --select-color-focus: var(--leu-color-func-cyan);
  --select-border-width: 2px;

  --select-label-color: var(--leu-color-black-100);
  --select-label-color-disabled: var(--select-color-disabled);
  --select-label-color-empty: var(--leu-color-black-60);

  --select-option-color: var(--leu-color-black-60);
  --select-option-color-focus: var(--select-color);

  --select-border-color: var(--leu-color-black-40);
  --select-border-color-focus: var(--select-color-focus);
  --select-border-color-disabled: var(--leu-color-black-20);
  --select-border-color-invalid: var(--select-color-invalid);

  --select-error-color: var(--leu-color-black-0);

  --select-clear-color: var(--leu-color-black-60);

  --select-font-regular: var(--leu-font-family-regular);
  --select-font-black: var(--leu-font-family-black);

  --select-apply-button-color: var(--leu-color-black-100);
  --select-apply-button-color-focus: var(--leu-color-black-80);
  --select-apply-button-font-color: var(--leu-color-black-0);

  --select-box-shadow-short: var(--leu-box-shadow-short);
  --select-box-shadow-regular: var(--leu-box-shadow-regular);

  position: relative;
  display: block;

  font-family: var(--select-font-regular);
}

:host([disabled]) {
  --select-color: var(--select-color-disabled);
  --select-color-focus: var(--select-color-disabled);
  --select-border-color: var(--select-border-color-disabled);
  --select-label-color: var(--select-label-color-disabled);
  --select-border-color-focus: var(--select-border-color-disabled);
  --select-clear-color: var(--select-color-disabled);
}

.select-toggle {
  min-height: 4.5rem;
  display: block;
  width: 100%;

  appearance: none;
  border: var(--select-border-width) solid var(--select-border-color);
  border-radius: 2px;
  font-size: 1rem;
  line-height: 1.5;
  padding: 1.375rem 3rem 1.375rem 1rem;

  background: none;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;

  cursor: pointer;
  text-align: left;
}

.select-toggle:hover,
.select-toggle:focus {
  border-color: var(--select-border-color-focus);
}

.select-toggle.filled.labeled {
  padding-bottom: 0.75rem;
  padding-top: 2rem;
  color: var(--select-color);
}

.select-toggle:focus-visible {
  outline: var(--select-border-width) solid var(--select-border-color-focus);
  outline-offset: 2px;
}

.label {
  position: absolute;
  top: 1.5rem;
  transition: top 0.1s ease;
  font-family: var(--select-font-regular);
}

.clear-button {
  --_length: 1.5rem;

  width: var(--_length);
  height: var(--_length);
  padding: 0;

  position: absolute;
  top: calc(50% - var(--_length) / 2);
  right: 2.6rem;

  cursor: pointer;

  background: none;
  color: var(--select-clear-color);
  border: none;

  /* border-radius is only defined for a nice focus outline */
  border-radius: 2px;
}

.clear-button:focus-visible {
  outline: var(--select-border-width) solid var(--select-border-color-focus);
  outline-offset: 2px;
}

.select-toggle[disabled],
.select-toggle[disabled] .clear-button {
  cursor: unset;
}

.select-toggle[disabled] .label {
  color: var(--select-label-color);
}

.select-toggle.open .label,
.select-toggle.filled .label,
.select-toggle:focus .label {
  color: var(--select-label-color);
  font-family: var(--select-font-black);
  font-size: 0.75rem;

  top: 0.875rem;

  transition: top 0.1s ease;
}

.arrow-icon {
  --_length: 1.5rem;

  width: var(--_length);
  height: var(--_length);
  padding: 0;

  position: absolute;
  top: calc(50% - var(--_length) / 2);
  right: 1rem;

  transform: rotate(0deg);
  transition: transform 0.25s ease;

  color: var(--select-color);
}

.select-toggle.open .arrow-icon {
  transform: rotate(180deg);
}

.select-menu-container {
  position: static;
  overflow: auto;

  display: flex;
  flex-direction: column;

  width: 100%;
  max-height: min(var(--auto-size-available-height), 24rem);

  padding: 0;
  margin: 0;

  border: none;
  border-radius: 1px;
  background-color: white;
  box-shadow: var(--select-box-shadow-regular), var(--select-box-shadow-short);
}

.menu {
  display: block;
  overflow: auto;
}

.before,
.after {
  display: block;
  margin: 0.75rem;
}

.select:not(.select--has-before) .before {
  display: none;
}

.select:not(.select--has-after) .after {
  display: none;
}

.apply-button-wrapper {
  background-color: var(--leu-color-black-10);
  padding: 0.75rem;
}

.apply-button {
  display: block;
}

.select-search {
  margin: 0.75rem;
}

.filter-message-empty {
  background: var(--leu-color-black-0);
  color: var(--leu-color-black-transp-60);

  padding: 0.75rem;
  margin: 0;
}

